syntax = "proto3";

package api.order.v1;

import "google/api/annotations.proto";

option go_package = "kratos_client/api/order/v1;v1";

// 订单服务
service OrderService {
  // 创建订单
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderReply) {
    option (google.api.http) = {
      post: "/api/v1/orders"
      body: "*"
    };
  }
  
  // 获取订单详情
  rpc GetOrder(GetOrderRequest) returns (GetOrderReply) {
    option (google.api.http) = {
      get: "/api/v1/orders/{order_no}"
    };
  }
  
  // 获取用户订单列表
  rpc ListUserOrders(ListUserOrdersRequest) returns (ListUserOrdersReply) {
    option (google.api.http) = {
      get: "/api/v1/users/{user_id}/orders"
    };
  }
  
  // 处理支付
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentReply) {
    option (google.api.http) = {
      post: "/api/v1/orders/{order_no}/payment"
      body: "*"
    };
  }
}

// 创建订单请求
message CreateOrderRequest {
  int64 user_id = 1;
  string user_name = 2;
  string user_phone = 3;
  int64 doctor_id = 4;
  string doctor_name = 5;
  int64 address_id = 6;
  string address_detail = 7;
  repeated OrderItem items = 8;
  string remark = 9;
}

// 订单项
message OrderItem {
  int64 drug_id = 1;
  int32 quantity = 2;
}

// 创建订单响应
message CreateOrderReply {
  string order_no = 1;
  string total_amount = 2;
  string status = 3;
  string message = 4;
}

// 获取订单请求
message GetOrderRequest {
  string order_no = 1;
}

// 获取订单响应
message GetOrderReply {
  Order order = 1;
  repeated OrderItemDetail items = 2;
}

// 订单信息
message Order {
  uint64 id = 1;
  string order_no = 2;
  int64 user_id = 3;
  string user_name = 4;
  string user_phone = 5;
  int64 doctor_id = 6;
  string doctor_name = 7;
  int64 address_id = 8;
  string address_detail = 9;
  string total_amount = 10;
  string pay_type = 11;
  string status = 12;
  string pay_time = 13;
  string drug_time = 14;
  string send_time = 15;
  string finish_time = 16;
  string cancel_time = 17;
  string remark = 18;
}

// 订单项详情
message OrderItemDetail {
  int64 id = 1;
  int64 order_id = 2;
  int64 drug_id = 3;
  string drug_name = 4;
  string drug_spec = 5;
  int32 quantity = 6;
  string price = 7;
  string subtotal = 8;
}

// 获取用户订单列表请求
message ListUserOrdersRequest {
  int64 user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

// 获取用户订单列表响应
message ListUserOrdersReply {
  repeated OrderSummary orders = 1;
  int64 total = 2;
}

// 订单摘要
message OrderSummary {
  string order_no = 1;
  string total_amount = 2;
  string status = 3;
  int32 item_count = 4;
}

// 处理支付请求
message ProcessPaymentRequest {
  string order_no = 1;
  string pay_type = 2;
  string amount = 3;
  string trade_no = 4;
}

// 处理支付响应
message ProcessPaymentReply {
  string message = 1;
  bool success = 2;
}