syntax = "proto3";

package api.payment.v1;

import "google/api/annotations.proto";

option go_package = "kratos_client/api/payment/v1;v1";

// 支付服务
service Payment {
  // 创建支付订单
  rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentReply) {
    option (google.api.http) = {
      post: "/v1/payment/create"
      body: "*"
    };
  }

  // 支付回调通知
  rpc PaymentNotify (PaymentNotifyRequest) returns (PaymentNotifyReply) {
    option (google.api.http) = {
      post: "/v1/payment/notify"
      body: "*"
    };
  }

  // 支付结果查询
  rpc QueryPayment (QueryPaymentRequest) returns (QueryPaymentReply) {
    option (google.api.http) = {
      get: "/v1/payment/query"
    };
  }

  // 支付返回页面
  rpc PaymentReturn (PaymentReturnRequest) returns (PaymentReturnReply) {
    option (google.api.http) = {
      get: "/v1/payment/return"
    };
  }


}

// 创建支付请求
message CreatePaymentRequest {
  string token = 1;           // 用户token
  string subject = 2;         // 商品标题
  string total_amount = 3;    // 支付金额
  string order_type = 4;      // 订单类型 (drug_order, consultation_order)
  string business_id = 5;     // 业务ID (药品订单ID或咨询订单ID)
  string description = 6;     // 订单描述
}

// 创建支付响应
message CreatePaymentReply {
  int32 code = 1;
  string message = 2;
  string payment_url = 3;     // 支付链接
  string order_id = 4;        // 订单号
}

// 支付通知请求
message PaymentNotifyRequest {
  map<string, string> params = 1; // 支付宝回调参数
}

// 支付通知响应
message PaymentNotifyReply {
  string result = 1; // success 或 fail
}

// 查询支付请求
message QueryPaymentRequest {
  string order_id = 1;        // 订单号
  string token = 2;           // 用户token
}

// 查询支付响应
message QueryPaymentReply {
  int32 code = 1;
  string message = 2;
  PaymentInfo payment_info = 3;
}

// 支付返回请求
message PaymentReturnRequest {
  map<string, string> params = 1; // 支付宝返回参数
}

// 支付返回响应
message PaymentReturnReply {
  int32 code = 1;
  string message = 2;
  string redirect_url = 3;    // 重定向地址
}



// 支付信息
message PaymentInfo {
  string order_id = 1;        // 订单号
  string trade_no = 2;        // 支付宝交易号
  string total_amount = 3;    // 支付金额
  string trade_status = 4;    // 交易状态
  string pay_time = 5;        // 支付时间
  string subject = 6;         // 商品标题
}

